--- a/assets/css/templatemo-onix-digital.css
+++ b/assets/css/templatemo-onix-digital.css
@@ -139,6 +139,7 @@ img {
 global styles
 --------------------------------------------- 
 */
+
 html,
 body {
   background: #fff;
@@ -149,6 +150,7 @@ body {
   background: #03a4ed;
   color: #fff;
 }
+
 
 ::-moz-selection {
   background: #03a4ed;
@@ -870,14 +872,15 @@ Banner Style
 
 .main-banner:after {
   content: '';
-  background-image: url(../images/baner-dec-left.png);
+  background-image: url(../images/green.png);
   background-repeat: no-repeat;
   position: absolute;
-  left: 0;
-  top: 100px;
-  width: 267px;
+  left: 0px;
+  top: 105px;
+  width: 2200px;
   height: 532px;
 }
+
 
 .main-banner:before {
   content: '';
@@ -928,6 +931,7 @@ Banner Style
 
 .main-banner .item .down-buttons .call-button i {
   margin-right: 5px;
+  margin-top: 10px;
   width: 46px;
   height: 46px;
   display: inline-block;
@@ -1098,14 +1102,14 @@ About
 }
 
 .about-us .fact-item .count-digit {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 700;
   color: #2a2a2a;
   margin-top: 5px;
 }
 
 .about-us .fact-item .count-title {
-  font-size: 15px;
+  font-size: 20px;
   color: #ff695f;
 }
 
