--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,11 @@ h1 {
   padding: 0 .5rem;
 }
 
+#card {
+  height: 90px;
+  width: 90px;
+}
+
 @media all and (max-width: 768px) {
   h1 {
     font-size: calc(1.5rem * var(--smaller));
