--- a/assets/css/templatemo-onix-digital.css
+++ b/assets/css/templatemo-onix-digital.css
@@ -43,6 +43,89 @@ figure, header, nav, section, article, aside, footer, figcaption {
   outline: 0;
 }
 
+.subscribe {
+  margin-top: 120px;
+}
+
+.subscribe .inner-content {
+  background-image: url(../images/subscribe-bg.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  border-radius: 20px;
+  padding: 60px 0px;
+  width: 100%;
+  position: relative;
+}
+
+.subscribe .inner-content:after {
+  content: '';
+  background-image: url(../images/subscribe-dec.png);
+  position: absolute;
+  width: 195px;
+  height: 138px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  right: -20px;
+  top: -20px;
+}
+
+.subscribe .inner-content h2 {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.subscribe .inner-content form {
+  width: 100%;
+  height: 80px;
+  border-radius: 40px;
+  background-color: #fff;
+}
+
+.subscribe .inner-content form input {
+  width: 38.5%;
+  margin-top: 20px;
+  line-height: 40px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0px 20px;
+  font-size: 15px;
+  color: #2a2a2a;
+}
+
+.subscribe .inner-content form input#website {
+  border-right: 1px solid #eee;
+}
+
+.subscribe .inner-content form input::placeholder {
+  color: #afafaf;
+}
+
+.subscribe .inner-content form button {
+  display: inline-block;
+  background-color: #03a4ed;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  width: 20%;
+  margin-right: 10px;
+  text-transform: capitalize;
+  padding: 12px 20px;
+  border-radius: 23px;
+  letter-spacing: 0.25px;
+  border: none;
+  text-align: center;
+  transition: all .3s;
+}
+
+.subscribe .inner-content form button:hover {
+  background-color: #ff695f;
+}
+
 /* clear fix */
 .grid:after {
   content: '';
